# nuedc-fpga

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
eic-final/: README.md  memory-mapping.md
eic-final/bd/: .gitignore
eic-final/bd/procesor_system_top/: procesor_system_top.bd
eic-final/bd/procesor_system_top/ui/: bd_3eb7eafd.ui
eic-final/bsp/standalone_bsp_0/: .cproject  .sdkproject  CMakeLists.txt  Makefile  system.mss
eic-final/bsp/standalone_bsp_0/CORTEXM3_AXI_0/include/: axi_adc.h  axi_dac.h  xparameters.h
eic-final/bsp/standalone_bsp_0/CORTEXM3_AXI_0/libsrc/axi_adc_v1_0/src/: Makefile  axi_adc.c
eic-final/bsp/standalone_bsp_0/CORTEXM3_AXI_0/libsrc/axi_dac_v1_0/src/: Makefile  axi_dac.c  axi_dac.h  axi_dac_selftest.c
eic-final/bsp/standalone_bsp_0/CORTEXM3_AXI_0/libsrc/bram_v4_3/src/: xbram_g.c
eic-final/fpga/ax7020/: .gitignore  ax7020.xdc  eic-final.xpr  top.v
eic-final/fpga/ax7020/ip/: main_mmcm.xci
eic-final/sim/: top_tb.sv
eic-final/software/: CMakeLists.txt  char_data.h  common.h  gpio.c  gpio.h  lcd.c  lcd.h  lcd_canvas.c  lcd_canvas.h  lcd_commands.h  main.c  main.h
eic-final/software/CMSIS/Device/Include/cm3soc/: cm3soc.h
ip/: axiadc.md  axidac.md
ip-tests/axiadc-test/bd/axi_vip_1/: axi_vip_1.bd
ip-tests/axiadc-test/bd/axi_vip_1/ui/: bd_fd6facc2.ui
ip-tests/axiadc-test/sim/: axi_adc_test.vh  tb_repeat_conv.sv  tb_repeat_conv_behav.wcfg  tb_single_conv.sv  tb_single_conv_behav.wcfg
ip-tests/axiadc-test/vivado/: .gitignore  axiadc-test.xpr
ip-tests/axidac-test/bd/: axi_vip_1.bxml
ip-tests/axidac-test/bd/axi_vip_1/: axi_vip_1.bd
ip-tests/axidac-test/bd/axi_vip_1/ui/: bd_fd6facc2.ui
ip-tests/axidac-test/sim/: tb_repeat_mode.sv  tb_repeat_mode_behav.wcfg  tb_single_conv.sv  tb_single_conv_behav.wcfg
ip-tests/axidac-test/vivado/: .gitignore  axidac-test.xpr
ip-tests/dac-swtest/: CMakeLists.txt  README.md  cm3soc.lds  main.c  startup.c  sys_irq_handlers.c
